...
            android:layout_height="wrap_content"
            android:indeterminateDrawable="@drawable/progressbar_refresh"
            android:foregroundGravity="center_horizontal|center_vertical"
            android:visibility="gone"
            android:layout_gravity="center_vertical|center_horizontal"/>
    <android.support.v7.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:iconifiedByDefault="false"
            app:queryBackground="@null"
            app:queryHint="Search The Warehouse"
            app:searchIcon="@null"
...
            android:id="@+id/refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/search_view"
    android:layout_marginTop="40dp">
    <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:animateLayoutChanges="false"
            />
    </android.support.v4.widget.SwipeRefreshLayout>
...
